Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -5,7 +5,7 @@
   <title>Basketball Team Signup</title>
  </head>
  <body>
-   <form action="POST" ></form>
+   <form method="POST" action="/"></form>
  </body>
 </html>
 
