--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -5,7 +5,9 @@
   <title>Basketball Team Signup</title>
  </head>
  <body>
-   <form method="POST" action="/"></form>
+   <form method="POST" action="/team">
+     <input
+   </form>
  </body>
 </html>
 
