--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -5,8 +5,9 @@
   <title>Basketball Team Signup</title>
  </head>
  <body>
+   <h1>Create a Basketball Team!</h1>
    <form method="POST" action="/team">
-     <input
+     <input 
    </form>
  </body>
 </html>
