Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -7,7 +7,7 @@
  <body>
    <h1>Create a Basketball Team!</h1>
    <form method="POST" action="/team">
-     <input 
+     <input type="text" name=""
    </form>
  </body>
 </html>
