--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -7,7 +7,8 @@
  <body>
    <h1>Create a Basketball Team!</h1>
    <form method="POST" action="/team">
-     <input type="text" name="name"
+     <label
+     <input type="text" name="name">
    </form>
  </body>
 </html>
