--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -7,7 +7,7 @@
  <body>
    <h1>Create a Basketball Team!</h1>
    <form method="POST" action="/team">
-     <label for="name"
+     <label for="name">Team Name</label>
      <input type="text" name="name">
    </form>
  </body>
