--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -9,6 +9,8 @@
    <form method="POST" action="/team">
      <label for="name">Team Name: </label>
      <input type="text" name="name">
+     <label for="coach">Coach: </label>
+     <input type="text" name="coach">
    </form>
  </body>
 </html>
