--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -7,8 +7,8 @@
  <body>
    <h1>Create a Basketball Team!</h1>
    <form method="POST" action="/team">
-     <p></p><label for="name">Team Name: </label>
-     <input type="text" name="name">
+     <p><label for="name">Team Name: </label>
+     <input type="text" name="name"></p>
      <label for="coach">Coach: </label>
      <input type="text" name="coach">
    </form>
