Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -9,7 +9,7 @@
    <form method="POST" action="/team">
      <p><label for="name">Team Name: </label>
      <input type="text" name="name"></p>
-     <label for="coach">Coach: </label>
+     <p></p><label for="coach">Coach: </label>
      <input type="text" name="coach">
    </form>
  </body>
