--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -9,8 +9,8 @@
    <form method="POST" action="/team">
      <p><label for="name">Team Name: </label>
      <input type="text" name="name"></p>
-     <p></p><label for="coach">Coach: </label>
-     <input type="text" name="coach">
+     <p><label for="coach">Coach: </label>
+     <input type="text" name="coach"></p>
    </form>
  </body>
 </html>
