--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -11,6 +11,8 @@
      <input type="text" name="name"></p>
      <p><label for="coach">Coach: </label>
      <input type="text" name="coach"></p>
+     <p><label for="pg">Point Guard: </label>
+     <input type="text" name="pg"></p>
    </form>
  </body>
 </html>
