--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -13,6 +13,10 @@
      <input type="text" name="coach"></p>
      <p><label for="pg">Point Guard: </label>
      <input type="text" name="pg"></p>
+     <p><label for="sg">Shooting Guard: </label>
+     <input type="text" name="sg"></p>
+     <p><label for="pf">Point Guard: </label>
+     <input type="text" name="pf"></p>
    </form>
  </body>
 </html>
