Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -15,8 +15,12 @@
      <input type="text" name="pg"></p>
      <p><label for="sg">Shooting Guard: </label>
      <input type="text" name="sg"></p>
-     <p><label for="pf">Point Guard: </label>
+     <p><label for="pf">Power Forward: </label>
      <input type="text" name="pf"></p>
+     <p><label for="sf">Small Forward: </label>
+     <input type="text" name="sf"></p>
+     <p><label for="c">Center: </label>
+     <input type="text" name="c"></p>
    </form>
  </body>
 </html>
