Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -21,6 +21,7 @@
      <input type="text" name="sf"></p>
      <p><label for="c">Center: </label>
      <input type="text" name="c"></p>
+     <p><input type="submit" id="Submit"></p>
    </form>
  </body>
 </html>
