--- a/views/team.erb
+++ b/views/team.erb
@@ -5,9 +5,8 @@
   <title>Basketball Team</title>
  </head>
  <body>
- 
-
-
+   <h1>Team Name: <%= @team_name %></h1><br>
+   <h2>Coach: <%= @coach %></h2><br>
  </body>
 </html>
 
