--- a/views/team.erb
+++ b/views/team.erb
@@ -6,11 +6,11 @@
  </head>
  <body>
    <h1>Team Name: <%= @team_name %></h1><br>
-   <h2>Coach: <%= @coach %></h2><br>
-   <h2>Point Guard: <%= @pg %></h2><br>
-   <h2>Shooting Guard: <%= @sg %></h2><br>
-   <h2>Power Forward: <%= @pf %></h2><br>
-   <h2>Small Forward: <%= @sf %></h2><br>
+   <h2>Coach: <%= @coach %></h2>
+   <h2>Point Guard: <%= @pg %></h2>
+   <h2>Shooting Guard: <%= @sg %></h2>
+   <h2>Power Forward: <%= @pf %></h2>
+   <h2>Small Forward: <%= @sf %></h2>
    <h2>Center: <%= @c %></h2><br>
  </body>
 </html>
